
syntax = "proto3";
package v1;

import "google/protobuf/duration.proto";

// Configuration object for vince instance
message Config {
  // Path to the main badger database.
  string db_path = 1;

  // Path to where block files are stored. Blocks are stored as files with ULID
  // as filenames
  string blocks_path = 2;

  // host:port to bind for http api. This is used by serve command. The server
  // serves ui console
  string listen_address = 3;

  // Control how much is logged options are
  // trace,debug,info,warn,error,fatal,panic
  string log_level = 4;

  // Interval for syncing buffered entries. By default events are buffered and
  // periodically saved.
  google.protobuf.Duration sync_interval = 5;

  // Expose /debug/pprof endpoint when serving
  bool enable_profile = 6;

  // host:port to bind myslq server. Serves web analytics via MySQL compliant
  // wire protocol.
  string mysql_listen_address = 7;

  string tls_cert_file = 8;
  string tls_key_file = 9;

  int64 events_buffer_size = 10;

  repeated Notifier notifiers = 11;

  string server_id = 12;
  string raft_path = 13;

  message Notifier {
    string name = 1;
    oneof provider {
      Email email = 2;
      Webhook webhook = 3;
    }
  }

  message Email {
    string to = 1;
    string from = 2;
    string hello = 3;
    string host_port = 4;
    string auth_username = 5;
    string auth_password = 6;
    string auth_secret = 7;
    string auth_identity = 8;
    map<string, string> headers = 9;
    string html = 10;
    string text = 11;
    bool require_tls = 12;
    HTTP.TLSConfig tls_config = 13;
  }

  message Webhook {
    HTTP http_config = 1;
    string url = 2;
  }

  message HTTP {
    BasicAuth basic_auth = 1;
    Authorization authorization = 2;
    OAuth2 pauth2 = 3;
    TLSConfig tls_config = 4;

    message BasicAuth {
      string username = 1;
      string password = 2;
    }
    message Authorization {
      string type = 1;
      string credentials = 2;
    }
    message OAuth2 {
      string client_id = 1;
      string client_secret = 2;
      repeated string client_scopes = 3;
      string token_url = 4;
      map<string, string> endpoint_params = 5;
      TLSConfig tls_config = 6;
    }

    message TLSConfig {
      string key_file = 1;
      string cert_file = 2;
      bool insecure_skip_verify = 3;
    }
  }
}

message Cluster {
  message Config {
    string name = 1;
    map<string, Node> nodes = 2;

    message Node {
      Client.Auth account = 1;
      // True if this node is used to bootstrap the cluster.
      bool bootstrap = 2;
      string address = 3;
    }
  }
}

message Client {
  bytes private_key = 1;

  // Authentication details of vince instances
  map<string, Instance> instance = 2;

  // Map of server_id to instance
  map<string, string> server_id = 3;

  // The default auth name to use.
  Active active = 4;

  map<string, Cluster.Config> clusters = 5;

  message Instance { map<string, Auth> accounts = 1; }

  message Active {
    string instance = 1;
    string account = 2;
  }
  message Auth {
    string name = 1;
    string token = 2;
    string server_id = 3;
  }
}

message Build { string version = 1; }
